didspace/err2.txt
   Compiling didspace v0.1.0 (/home/davide/Downloads/proj_javescript/wasm-debug-suite/didspace)
error: `match` arm body without braces
   --> src/main.rs:162:27
    |
162 |         Commands::Repl => start_repl()?;
    |                        -- ^^^^^^^^^^^^^ this statement is not surrounded by a body
    |                        |
    |                        while parsing the `match` arm starting here
    |
help: replace `;` with `,` to end a `match` arm expression
    |
162 -         Commands::Repl => start_repl()?;
162 +         Commands::Repl => start_repl()?,
    |

error[E0425]: cannot find value `report` in this scope
   --> src/main.rs:154:28
    |
154 |             println!("{}", report.report());
    |                            ^^^^^^ not found in this scope

warning: unused import: `Subcommand`
 --> src/main.rs:1:20
  |
1 | use clap::{Parser, Subcommand};
  |                    ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::fmt`
 --> src/hex_dump.rs:3:5
  |
3 | use std::fmt;
  |     ^^^^^^^^

warning: unused import: `rustyline::highlight::Highlighter`
 --> src/repl.rs:4:5
  |
4 | use rustyline::highlight::Highlighter;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `CommandCompleter` and `start_repl`
 --> src/main.rs:9:12
  |
9 | use repl::{start_repl, CommandCompleter};
  |            ^^^^^^^^^^  ^^^^^^^^^^^^^^^^

error[E0599]: no variant named `Profile` found for enum `Commands`
   --> src/main.rs:157:19
    |
157 |         Commands::Profile { file } => {
    |                   ^^^^^^^ variant not found in `Commands`
    |
   ::: src/cli.rs:12:1
    |
 12 | pub enum Commands {
    | ----------------- variant `Profile` not found here

Some errors have detailed explanations: E0425, E0599.
For more information about an error, try `rustc --explain E0425`.
warning: `didspace` (bin "didspace") generated 4 warnings
error: could not compile `didspace` (bin "didspace") due to 3 previous errors; 4 warnings emitted
